TCP server communication changed: token -> continuous